--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -34,12 +34,11 @@
      <string name="login_accept">ACEPTAR</string>
      <string name="login_cancel">CANCELAR</string>
     
-    <!-- pantalla logout -->
+    <!-- fragment logout -->
     <string name="logout_title">SALIR</string>
-     <string name="logout_message">HA ELEGIDO SALIR DE SU CUENTA Y CONTINUAR SIN CONEXIÓN. ¿DESEA CONTINUAR?</string>
-     <string name="logout_accept">ACEPTAR</string>
-     <string name="logout_cancel">CANCELAR</string>
-    
+    <string name="logout_message">HA ELEGIDO SALIR DE SU CUENTA Y CONTINUAR SIN CONEXIÓN. ¿DESEA CONTINUAR?</string>
+    <string name="logout_accept">ACEPTAR</string>
+    <string name="logout_cancel">CANCELAR</string>
     
     <!-- pantalla elegir escenario -->
     <string name="title_activity_new_scene">SELECCIONE ESCENA</string>
@@ -65,6 +64,18 @@
     <string name="habitacion">HABITACIÓN</string>
     <string name="cocina">COCINA</string>
     <string name="banio">BAÑO</string>
+
     <!-- otras pantallas -->
+	
+    <!-- fragment text -->
+    <string name="insert_text_title">INSERTAR TEXTO</string>
+    <string name="insert_text_accept">ACEPTAR</string>
+    <string name="insert_text_cancel">CANCELAR</string>
+
+    
+    
+    
+    
+    
 
 </resources>
