--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -69,15 +69,15 @@
     
     <!-- otras pantallas -->
 	
-    <!-- fragment text -->
+    <!-- fragment insert text -->
     <string name="insert_text_title">INSERTAR TEXTO</string>
     <string name="insert_text_accept">ACEPTAR</string>
     <string name="insert_text_cancel">CANCELAR</string>
 
-    
-    
-    
-    
-    
+    <!-- fragment insert image -->
+    <string name="insert_image_title">INSERTAR IMAGEN</string>
+    <string name="insert_image_accept">ACEPTAR</string>
+    <string name="insert_image_cancel">CANCELAR</string>
 
+    
 </resources>
