--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -47,9 +47,9 @@
     <string name="new_scene_exit">SALIR</string>
 
     <!-- pantalla elegir interior de escenario -->
-    <string name="title_activity_new_scene_inner">SELECCIONE EL INTERIOR DE ESCENARIO</string>
+    <string name="title_activity_new_scene_inner">SELECCIONE UN INTERIOR DE</string>
     <string name="new_scene_inner_start">EMPEZAR</string>
-    <string name="new_scene_inner_exit">SALIR</string>
+    <string name="new_scene_inner_exit">VOLVER</string>
     
     <!-- Canvas texts -->
     <string name="canvas_done">HECHO</string>
@@ -66,6 +66,7 @@
     <string name="banio">BAÑO</string>
     <string name="aula">AULA</string>
     <string name="patio">PATIO</string>
+    <string name="nueva">NUEVA</string>
     
     <!-- otras pantallas -->
 	
