--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -84,6 +84,7 @@
     <string name="insert_image_title">INSERTAR IMAGEN</string>
     <string name="insert_image_accept">ACEPTAR</string>
     <string name="insert_image_cancel">CANCELAR</string>
+    <string name="insert_image_back">VOLVER</string>
 
     <!-- erase all -->
     <string name="erase_all_title">BORRAR TODO</string>
