--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -106,8 +106,8 @@
     <string name="calc_dot">.</string>
     <string name="calc_open">(</string>
     <string name="calc_close">)</string>
-    <string name="calc_clear">C</string>
-    <string name="calc_clear_all">CA</string>
+    <string name="calc_clear">&lt;</string>
+    <string name="calc_clear_all">&lt;&lt;</string>
     <string name="calc_equal">=</string>
     <string name="close_modal">CERRAR</string>
 
