--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -123,6 +123,8 @@
     <!-- historial -->
     <string name="conversation_history">HISTORIAL DE CONVERSACIONES</string>
 
+    <string name="change_conversation_title">INGRESE UN NUEVO NOMBRE</string>
+    
     <!-- borrar conversacion historica -->
     <string name="delete_conversation_title">BORRAR CONVERSACIÓN</string>
     <string name="delete_conversation_message">ESTÁ SEGURO QUE DESEA BORRAR LA CONVERSACIÓN?</string>
