--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="settings_back">ATRAS</string>
     <string name="settings_pencil_size">TAMAÑO DE LÁPIZ</string>
     <string name="settings_pencil_color">COLOR DE LÁPIZ</string>
+	<string name="settings_text_size">TAMAÑO DE TEXTO</string>
+    <string name="settings_text_color">COLOR DE TEXTO</string>
     <string name="settings_eraser_size">TAMAÑO GOMA</string>
     <string name="settings_scenery">ESCENARIOS</string>
     <string name="settings_elements">ELEMENTOS</string>
