[USA12] Elemento Contactos como versión extendida de imágenes.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -99,6 +99,9 @@
     <string name="insert_image_cancel">CANCELAR</string>
     <string name="insert_image_back">VOLVER</string>
 
+     <!-- fragment insert contact -->
+    <string name="insert_contact_title">INSERTAR CONTACTO</string>
+    
     <!-- erase all -->
     <string name="erase_all_title">BORRAR TODO</string>
     <string name="erase_all_message">ESTA SEGURO QUE DESEA BORRAR TODO?</string>
@@ -152,6 +155,7 @@
     <string name="food_2">LECHUGA</string>
     <string name="food_3">PIZZA</string>
     
+    <string name="con_1">MARIANA GARCÍA</string>
     
     
     
