[USA4][USA12] Etiquetas enmarcadas. Actualización Readme.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -169,6 +169,7 @@
     <string name="food_3">PIZZA</string>
     
     <string name="con_1">MARIANA GARCÍA</string>
+	<string name="con_2">PEPE GUANO</string>
     
     
     
