[USA-20] Se saca el boton agregar del dialog cuando está en categoria

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -31,12 +31,16 @@
     <string name="settings_scenery">ESCENARIOS</string>
     <string name="settings_images">IMAGENES</string>
     <string name="settings_images_explain">SELECCIONE PARA VER LAS ETIQUETAS AL INSERTAR IMAGENES</string>
-    <string name="settings_people">PERSONAS</string>
+    <string name="settings_image_title">PERSONALIZAR IMÁGENES</string>
+    <string name="settings_image_sumary">SELECCIONE PARA PERSONALIZAR LAS IMÁGENES Y CATEGORÍAS</string>
+    <string name="settings_people">CONTACTOS</string>
     <string name="settings_people_explain">SELECCIONE PARA VER LAS ETIQUETAS AL INSERTAR PERSONAS</string>
+    <string name="settings_people_title">PERSONALIZAR CONTACTOS</string>
+    <string name="settings_people_summary">SELECCIONE PARA PERSONALIZAR LOS CONTACTOS Y CATEGORÍAS</string>
     <string name="settings_user">USUARIO</string>
     <string name="settings_login">ENTRAR</string>
     <string name="settings_logout">SALIR</string>
-    <string name="settings_element_text">USAR ETIQUETAS EN ELEMENTOS?</string>
+    <string name="settings_element_text">USAR ETIQUETAS?</string>
 
      <!-- pantalla keys -->
      
