[MISC] Manner of use. Screens

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -170,7 +170,7 @@
     <string name="food_3">PIZZA</string>
     
     <string name="con_1">MARIANA GARCÍA</string>
-	<string name="con_2">PEPE GUANO</string>
+	<string name="con_2">JESI FERREYRA</string>
     
      <!-- manner of use -->
 	<string name="title_activity_manner_of_use">USO</string>
